# bupt_dns

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  dns.rar  dnsrelay1.txt  main  main1
include/: cache.h  common.h  hash.h  local_record.h  log.h  relay.h  threadPool.h
src/: CMakeLists.txt  cache.c  client.c  common.c  dnsrelay.txt  hash.c  local_record.c  log.c  main.c  relay.c  threadPool.c
test/: CMakeLists.txt  test.c  test_cache.c  test_dns.c  test_global.py  test_hash.c  test_loadrecord.c  test_threadpool.c  test_timeout.c
